# non_linear_modelling_methods

./: .gitignore  .gitmodules  requirements.txt
task-1/: henon.cpp  hpc.py  job.sh  poc.py
task-2/: CMakeLists.txt  README.md  build-wsl.sh  get_data.sh  initial_condition.sh  job.sh  join-logs.sh  main.cpp  poc.py  render.py  run-hpc.sh  run-wsl.sh  run_solver.sh
task-2/configs/: high.json  low.json  mid.json
task-2/script/: absolute-error.py  loader.py  main.py  relative-pointwise-error.py  renderer.py  tests.py
task-2/src/: cereal_test.cpp  config.hpp  init_cond.cpp  main.cpp  my_function.hpp  schrodinger_solver.hpp  solver_config.hpp
